# UIT-EduAdvisor-

./: start-demo.sh
backend/: main.py  pyproject.toml  render.yaml  requirements.txt  uit_eduadvisor.db
backend/core/: database.py
backend/models/: models.py
backend/routers/: subjects.py  transcript.py
backend/schemas/: schemas.py
backend/services/: parser.py  transcript_service.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/components/: FileUpload.tsx  Navbar.tsx  RoadmapView.tsx
frontend/src/lib/: AuthContext.tsx  api.ts
