[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.129.0",
    "lxml>=6.0.2",
    "python-multipart>=0.0.22",
    "sqlmodel>=0.0.37",
    "uvicorn[standard]>=0.40.0",
]
